--- a/package.json
+++ b/package.json
@@ -67,13 +67,14 @@
     "webpack": "4.42.0",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "json-server": "^0.16.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "server": "npx json-server --watch public/db.json --port=3001"
+    "server": "json-server --watch public/db.json --port=3001"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -143,5 +144,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "json-server": "^0.16.1"
   }
 }
